applauncherd (0.25.2) unstable; urgency=low

  * Fixes: NB#240051 - applauncherd-launcher: please remove requests of DRM related token

 -- Jussi Lind <jussi.lind@nokia.com>  Mon, 04 Apr 2011 16:24:15 +0300

applauncherd (0.25.1) stable; urgency=low

  * Fixes: NB#241927 - QML boosted applications have incorrect MApplication::objectName
  * Lock file moved to /var/run
  * Changes: Use #include <MDeclarativeCache> in boosted-qml examples
  * Changes: Added -I/usr/include/applauncherd to qdeclarative-boostable.pc

 -- Jussi Lind <jussi.lind@nokia.com>  Thu, 31 Mar 2011 17:13:21 +0300

applauncherd (0.25.0) stable; urgency=low

  * Fixes: NB#241755 - Booster-e doesn't work with executables
  * Fixes: NB#239608 - invoker doesn't forward ^C always
  * Changes: Directory naming in the source tree made consistent => all lower case.
  * Changes: Partially fixes bug 231306 - Launcher slows down boot by loading irrelevant libraries
  * Changes: New main page for the documentation
  * Changes: moved e-booster tests to functests and marked them as significant
  * Changes: moved single instance tests to functests and made them significant
  * Changes: moved qml booster tests to functests and made them significant
  * Changes: Remove comments from performance tests.xml files

 -- Jussi Lind <jussi.lind@nokia.com>  Wed, 30 Mar 2011 15:58:08 +0300

applauncherd (0.24.5) stable; urgency=low

  * Fixes: NB#240045 - Not able to open bluetooth menu from settings application

 -- Juha Lintula <juha.lintula@nokia.com>  Thu, 24 Mar 2011 11:30:48 +0200

applauncherd (0.24.4) stable; urgency=low

  * Changes: library list update reverted. Reopens NB#231306.

 -- Antti Kervinen <antti.kervinen@nokia.com>  Thu, 24 Mar 2011 10:55:43 +0200
  
applauncherd (0.24.3) stable; urgency=low

  * Changes: Removed more failing insignificant tests which might prevent integration

 -- Juha Lintula <juha.lintula@nokia.com>  Thu, 24 Mar 2011 10:55:43 +0200

applauncherd (0.24.2) stable; urgency=low
